@@ -23,10 +23,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p9P-Uh-mGW" userLabel="Table_Container">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="272"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="344"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="KdT-aq-IQ9" userLabel="Projects_Table">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="272"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="344"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableView>
                                 </subviews>
@@ -38,21 +38,22 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6s-UY-Ble" userLabel="Chart_Container">
-                                <rect key="frame" x="0.0" y="282" width="375" height="272"/>
+                                <rect key="frame" x="0.0" y="354" width="375" height="200"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgD-Wr-PEr" userLabel="Most_Productive">
                                         <rect key="frame" x="8" y="0.0" width="359" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="20"/>
+                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="19"/>
                                         <color key="textColor" red="0.85098039219999999" green="0.85098039219999999" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MI2-pm-Arm" userLabel="OSR_Chart_Container" customClass="BarChartView" customModule="Charts">
-                                        <rect key="frame" x="12" y="32" width="351" height="228"/>
+                                        <rect key="frame" x="12" y="32" width="351" height="156"/>
                                     </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="MI2-pm-Arm" firstAttribute="leading" secondItem="L6s-UY-Ble" secondAttribute="leading" constant="12" id="0lC-xu-wN3"/>
+                                    <constraint firstAttribute="height" constant="200" id="DJR-fz-0VE"/>
                                     <constraint firstAttribute="bottom" secondItem="MI2-pm-Arm" secondAttribute="bottom" constant="12" id="c67-j8-Vgl"/>
                                     <constraint firstItem="MI2-pm-Arm" firstAttribute="top" secondItem="L6s-UY-Ble" secondAttribute="top" constant="32" id="ja8-2r-7hT"/>
                                     <constraint firstAttribute="trailing" secondItem="MI2-pm-Arm" secondAttribute="trailing" constant="12" id="oC9-EM-jS7"/>
@@ -63,7 +64,6 @@
                         <constraints>
                             <constraint firstItem="p9P-Uh-mGW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="EkU-FM-rL4"/>
                             <constraint firstAttribute="trailing" secondItem="L6s-UY-Ble" secondAttribute="trailing" id="H7O-AM-9Hc"/>
-                            <constraint firstItem="L6s-UY-Ble" firstAttribute="height" secondItem="p9P-Uh-mGW" secondAttribute="height" id="Mwg-p0-JYr"/>
                             <constraint firstItem="L6s-UY-Ble" firstAttribute="top" secondItem="p9P-Uh-mGW" secondAttribute="bottom" constant="10" id="XNr-eG-xK8"/>
                             <constraint firstItem="L6s-UY-Ble" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fmZ-Nc-enS"/>
                             <constraint firstItem="p9P-Uh-mGW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lHJ-n1-xPE"/>
