@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="52" id="LQ1-JN-uqn" userLabel="Projects_Table_View_Cell" customClass="AKProjectsTableViewCell" customModule="CoderToDo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="72" id="LQ1-JN-uqn" userLabel="Projects_Table_View_Cell" customClass="AKProjectsTableViewCell" customModule="CoderToDo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LQ1-JN-uqn" id="fPE-SM-qRh" userLabel="Main_Container">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="51.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="71.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptn-2q-xEM" userLabel="Info_Container">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="71.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OSR (%):" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5T-DH-Qqy" userLabel="OSR">
                                 <rect key="frame" x="16" y="4" width="60" height="20"/>
@@ -72,7 +72,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBI-3e-PvK" userLabel="Add_Tomorrow_Task">
-                                <rect key="frame" x="252" y="8" width="60" height="36"/>
+                                <rect key="frame" x="252" y="8" width="60" height="55.5"/>
                                 <color key="backgroundColor" red="0.16078431369999999" green="0.1764705882" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="qT4-r5-5p5"/>
@@ -85,6 +85,16 @@
                                     <action selector="addTomorrowTask:" destination="LQ1-JN-uqn" eventType="touchUpInside" id="WGb-AR-HGx"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tomorrow is not set up." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeZ-rz-o5g" userLabel="New_Day_State_Value">
+                                <rect key="frame" x="16" y="48" width="228" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="ANC-H0-qDz"/>
+                                    <constraint firstAttribute="width" constant="228" id="wTt-cc-S4m"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="16"/>
+                                <color key="textColor" red="0.98431372549999996" green="0.28627450980000002" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="5X0-Z5-c11" firstAttribute="top" secondItem="Ptn-2q-xEM" secondAttribute="top" constant="4" id="4DM-Ih-sec"/>
@@ -94,9 +104,11 @@
                             <constraint firstItem="azV-ZA-cfB" firstAttribute="leading" secondItem="5X0-Z5-c11" secondAttribute="trailing" id="BRX-jL-PPY"/>
                             <constraint firstAttribute="bottom" secondItem="BBI-3e-PvK" secondAttribute="bottom" constant="8" id="EbU-eU-dos"/>
                             <constraint firstItem="J5T-DH-Qqy" firstAttribute="leading" secondItem="Ptn-2q-xEM" secondAttribute="leading" constant="16" id="EgW-dE-g14"/>
+                            <constraint firstItem="EeZ-rz-o5g" firstAttribute="leading" secondItem="Ptn-2q-xEM" secondAttribute="leading" constant="16" id="U9n-os-RKP"/>
                             <constraint firstItem="gTG-4c-VAa" firstAttribute="top" secondItem="azV-ZA-cfB" secondAttribute="bottom" constant="2" id="WZD-xK-jUY"/>
                             <constraint firstItem="gTG-4c-VAa" firstAttribute="leading" secondItem="Bp5-qo-7lw" secondAttribute="trailing" id="dDT-qe-Wvx"/>
                             <constraint firstItem="5X0-Z5-c11" firstAttribute="leading" secondItem="J5T-DH-Qqy" secondAttribute="trailing" id="iRA-j9-iQD"/>
+                            <constraint firstItem="EeZ-rz-o5g" firstAttribute="top" secondItem="gTG-4c-VAa" secondAttribute="bottom" constant="2" id="r7j-nr-AC4"/>
                             <constraint firstItem="Bp5-qo-7lw" firstAttribute="leading" secondItem="Ptn-2q-xEM" secondAttribute="leading" constant="16" id="tR7-bz-8sa"/>
                             <constraint firstItem="Bp5-qo-7lw" firstAttribute="top" secondItem="5X0-Z5-c11" secondAttribute="bottom" constant="2" id="uiy-PN-yLk"/>
                             <constraint firstAttribute="trailing" secondItem="BBI-3e-PvK" secondAttribute="trailing" constant="8" id="zwI-in-PXP"/>
@@ -116,6 +128,7 @@
                 <outlet property="closeValue" destination="gTG-4c-VAa" id="a79-De-Vhs"/>
                 <outlet property="infoContainer" destination="Ptn-2q-xEM" id="dV1-Na-IJK"/>
                 <outlet property="mainContainer" destination="fPE-SM-qRh" id="7PE-cp-Iua"/>
+                <outlet property="newDayStateValue" destination="EeZ-rz-o5g" id="QlM-9E-a3d"/>
                 <outlet property="osrValue" destination="5X0-Z5-c11" id="P92-wH-SGJ"/>
                 <outlet property="runningDaysValue" destination="Bp5-qo-7lw" id="eEm-0U-6tf"/>
                 <outlet property="startValue" destination="azV-ZA-cfB" id="U5W-vW-5ze"/>
