@@ -5,6 +5,7 @@ Functionalities
     * 
 Changes
     * Version 1.0 Build 01 (2017/04/15)
+        * Added support for showing if tomorrow is set or not in the project's table. (2017/04/12)
         * Improved support for the table caching system. (2017/04/12)
         * Added support for sorting projects by use (Default). (2017/04/11)
         * Added support for Fabric and Crashlytics. (2017/04/10)
